--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redis": "^2.8.0"
   },
   "scripts": {
-    "start": "react-scripts build && nodemon server.js",
+    "start": "react-scripts build && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
